src/objects/SObject_Hierarchy__mdt.object
<CustomObject>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lookup_Field_Api__c</fullName>
        <label>Lookup Field Api</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Api__c</fullName>
        <label>Parent Api</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_type_Name__c</fullName>
        <label>Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sobject_Api__c</fullName>
        <label>Sobject Api Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemInfo__c</fullName>
        <label>SourceSystemInfo</label>
        <referenceTo>SourceSystemInfo__mdt</referenceTo>
        <relationshipLabel>SObject Hierarchies</relationshipLabel>
        <relationshipName>SObject_Hierarchies</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>SObject Hierarchy</label>
    <pluralLabel>SObject Hierarchies</pluralLabel>
</CustomObject>